--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   uuid: ^4.5.1
   image_picker: ^1.1.2
   location: ^8.0.0
+  google_maps_flutter: ^2.12.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
